METAMAC-1887 - [Página 2/3] Mostrar metadatos en la pantalla de información >> Añadidos getters correspondientes a metadatos visibles en el portal. Distinción en handlebars entre texto, fecha y recurso enlazable. Traducción de etiquetas. Modificación formato fechas. Refactor localizeLabel para que no dependa del orden en que dependen las etiquetas. Añadido scroll. Añadido breakword para evitar que el texto exceda los límites. Corrección de htmls para que se formatee correctamente cuando forma parte de un campo.
git-svn-id: http://svn.arte-consultores.com/svn/arte/istac/metamac/metamac-portal/trunk/metamac-portal@51364 05f23f4b-1f0b-0410-ba1b-ad9509270e59

--- a/metamac-portal-web-client/src/main/less/components/sidebar.less
+++ b/metamac-portal-web-client/src/main/less/components/sidebar.less
@@ -87,6 +87,7 @@
     .sidebar-sidebar-content {
         height: 100%;
         margin-right: @splitterWidth;
+        overflow-y: auto;
     }
 
     &.animation {
