--- a/metamac-portal-web-client/src/main/less/dataset.less
+++ b/metamac-portal-web-client/src/main/less/dataset.less
@@ -110,6 +110,7 @@
             display: block;
             margin-bottom: 8px;
             color: #2F719E;
+            word-wrap: break-word;
         }
     }
 
